# catchem

./: .gitignore  pyproject.toml
src/catchem/: __init__.py  config.json  consts.py  logic.py  pokestats_db.json
