[project]
name = "catchem"
version = "0.1.0"
description = "Quickly search for a Pokemon's stats, moves, and evolutions in the terminal."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "fuzzywuzzy[speedup]>=0.18.0",
    "requests>=2.32.3",
    "tabulate>=0.9.0",
]

[project.scripts]
catchem = "catchem:catchem"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
